[gd_scene load_steps=3 format=2]

[ext_resource path="res://EuBraBo/assets/pause_menu_tema.tres" type="Theme" id=1]
[ext_resource path="res://EuBraBo/scrips/telaDeTilulo.gd" type="Script" id=2]

[node name="telaDeTilulo" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -192.0
margin_right = 192.0
script = ExtResource( 2 )

[node name="CanvasDaTelaTitulo" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasDaTelaTitulo"]
margin_left = 142.0
margin_top = 38.0
margin_right = 251.0
margin_bottom = 185.0

[node name="newGame" type="Button" parent="CanvasDaTelaTitulo/VBoxContainer"]
margin_right = 109.0
margin_bottom = 16.0
theme = ExtResource( 1 )
text = "New Game"

[node name="continue" type="Button" parent="CanvasDaTelaTitulo/VBoxContainer"]
margin_top = 20.0
margin_right = 109.0
margin_bottom = 36.0
theme = ExtResource( 1 )
text = "Continue"

[node name="optons" type="Button" parent="CanvasDaTelaTitulo/VBoxContainer"]
margin_top = 40.0
margin_right = 109.0
margin_bottom = 56.0
theme = ExtResource( 1 )
text = "Optons"

[node name="credits" type="Button" parent="CanvasDaTelaTitulo/VBoxContainer"]
margin_top = 60.0
margin_right = 109.0
margin_bottom = 76.0
theme = ExtResource( 1 )
text = "Credits"

[node name="quit" type="Button" parent="CanvasDaTelaTitulo/VBoxContainer"]
margin_top = 80.0
margin_right = 109.0
margin_bottom = 96.0
theme = ExtResource( 1 )
text = "Quit"

[connection signal="pressed" from="CanvasDaTelaTitulo/VBoxContainer/newGame" to="." method="_on_newGame_pressed"]
[connection signal="pressed" from="CanvasDaTelaTitulo/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CanvasDaTelaTitulo/VBoxContainer/optons" to="." method="_on_optons_pressed"]
[connection signal="pressed" from="CanvasDaTelaTitulo/VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CanvasDaTelaTitulo/VBoxContainer/quit" to="." method="_on_quit_pressed"]
